[package]
name = "diesel_async_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={version="0.6.15",features=["headers","multipart"]} 
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0" 
chrono = "0.4.24"
uuid = {version='1.3.1',features=["v4"]}
lazy_static = "1.4.0"
tower-http = {version="0.4.0",features=["limit"]}